// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`edit-coding-criterion-modal renders correctly (no selected criterion) 1`] = `
<div
  className="css-1iw6hgd-Overlay"
>
  <div
    className="css-1iw6hgd-Overlay"
  >
    <div>
      <div
        className="css-14d3g2k-Modal"
      >
        <header
          className="css-a19c36-Modal"
        >
          <div
            className="css-1f6p2vj-Heading"
          >
            coding_criteria__edit_title
          </div>
          <div
            className="css-12vbzj8-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
            onClick={[MockFunction]}
          />
        </header>
        <section
          className="css-1q7islf-Modal"
        >
          <div
            className="css-1j59qpg-EditCodingCriterionModal"
          >
            <div
              className="css-33loto-EditCodingCriterionModal"
            >
              <div
                className="css-qcf7xd-Text"
              >
                coding_criteria__item_meta_data_label
              </div>
              <div
                className="css-lp36gr-EditCodingCriterionModal"
              >
                <div
                  className="css-11sbj94-Card"
                >
                  <div
                    className="css-1pf4w2g-CodingItemMetaCard"
                  >
                    <div
                      className="css-1j31nfz-CodingItemMetaCard"
                    >
                      <div
                        className="css-172xare-CodingItemMetaCard"
                      >
                        <div
                          className="css-qcf7xd-Text"
                        >
                          coding_criteria__item_meta_data_title
                        </div>
                        <div
                          className="css-17zbm7y-Text"
                        >
                          Item Analytisch
                        </div>
                      </div>
                      <div
                        className="css-172xare-CodingItemMetaCard"
                      >
                        <div
                          className="css-qcf7xd-Text"
                        >
                          coding_criteria__item_meta_data_method
                        </div>
                        <div
                          className="css-1xmxggd-CodingItemMetaCard"
                        >
                          <div
                            className="css-l0jg45-Icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": {},
                              }
                            }
                          />
                          <div
                            className="css-17zbm7y-Text"
                          >
                            coding_criteria__item_meta_data_method_manual
                          </div>
                        </div>
                      </div>
                      <div
                        className="css-172xare-CodingItemMetaCard"
                      >
                        <div
                          className="css-qcf7xd-Text"
                        >
                          coding_criteria__item_meta_data_type
                        </div>
                        <div
                          className="css-1xmxggd-CodingItemMetaCard"
                        >
                          <div
                            className="css-l0jg45-Icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": {},
                              }
                            }
                          />
                          <div
                            className="css-17zbm7y-Text"
                          >
                            coding_criteria__item_meta_data_type_holistic
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="css-172xare-CodingItemMetaCard"
                    >
                      <div
                        className="css-qcf7xd-Text"
                      >
                        coding_criteria__item_meta_data_description
                      </div>
                      <div
                        className="css-17zbm7y-Text"
                      >
                        Beschreibung des Items
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="css-1f7e4ki-EditCodingCriterionModal"
                >
                  <div
                    className="css-14jkzs7-CodingCriteriaList"
                  >
                    <div
                      className="css-6lflgn-Card"
                    >
                      <div
                        className="card-header css-1px9ixu-CardHeader"
                      >
                        <div
                          className="css-1f6p2vj-Heading"
                        >
                          coding_criteria__criterion_list_label
                        </div>
                      </div>
                      <div
                        className="css-1h6h5xo-Table"
                      >
                        <div
                          className="css-tqgzls-Table"
                        >
                          <div
                            className="css-1vq6m7g-Table"
                          >
                            <div
                              className="entity-row css-ah7j6b-Table"
                              onClick={[Function]}
                            >
                              <div
                                className="css-1sx0izl-Table"
                              >
                                <div
                                  className="css-1ex4m7a-Table"
                                >
                                  <div
                                    className="css-14cnkjy-Text"
                                  >
                                    Beschreibung Kodieranweisung 1
                                  </div>
                                </div>
                              </div>
                              <div
                                className="css-hfm0xv-Table"
                              >
                                <div
                                  className="css-1ex4m7a-Table"
                                >
                                  coding_criteria__criterion_list_score
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            className="css-1vq6m7g-Table"
                          >
                            <div
                              className="entity-row css-ah7j6b-Table"
                              onClick={[Function]}
                            >
                              <div
                                className="css-1sx0izl-Table"
                              >
                                <div
                                  className="css-1ex4m7a-Table"
                                >
                                  <div
                                    className="css-14cnkjy-Text"
                                  >
                                    Beschreibung Kodieranweisung 2
                                  </div>
                                </div>
                              </div>
                              <div
                                className="css-hfm0xv-Table"
                              >
                                <div
                                  className="css-1ex4m7a-Table"
                                >
                                  coding_criteria__criterion_list_score
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            className="css-1vq6m7g-Table"
                          >
                            <div
                              className="entity-row css-ah7j6b-Table"
                              onClick={[Function]}
                            >
                              <div
                                className="css-1sx0izl-Table"
                              >
                                <div
                                  className="css-1ex4m7a-Table"
                                >
                                  <div
                                    className="css-14cnkjy-Text"
                                  >
                                    Beschreibung Kodieranweisung 3
                                  </div>
                                </div>
                              </div>
                              <div
                                className="css-hfm0xv-Table"
                              >
                                <div
                                  className="css-1ex4m7a-Table"
                                >
                                  coding_criteria__criterion_list_score
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            className="css-1vq6m7g-Table"
                          >
                            <div
                              className="entity-row css-ah7j6b-Table"
                              onClick={[Function]}
                            >
                              <div
                                className="css-1sx0izl-Table"
                              >
                                <div
                                  className="css-1ex4m7a-Table"
                                >
                                  <div
                                    className="css-14cnkjy-Text"
                                  >
                                    Beschreibung Kodieranweisung 4
                                  </div>
                                </div>
                              </div>
                              <div
                                className="css-hfm0xv-Table"
                              >
                                <div
                                  className="css-1ex4m7a-Table"
                                >
                                  coding_criteria__criterion_list_score
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            className="css-1vq6m7g-Table"
                          >
                            <div
                              className="entity-row css-ah7j6b-Table"
                              onClick={[Function]}
                            >
                              <div
                                className="css-1sx0izl-Table"
                              >
                                <div
                                  className="css-1ex4m7a-Table"
                                >
                                  <div
                                    className="css-14cnkjy-Text"
                                  >
                                    coding_criteria__criterion_list_description_placeholder
                                  </div>
                                </div>
                              </div>
                              <div
                                className="css-hfm0xv-Table"
                              >
                                <div
                                  className="css-1ex4m7a-Table"
                                >
                                  coding_criteria__criterion_list_score
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="css-7iutgy-CodingCriteriaList"
                    >
                      <button
                        className="css-mdrh0d-Button"
                        disabled={false}
                        onClick={[Function]}
                      >
                        <div
                          className="css-95j2hm-Button"
                        >
                          <div
                            className="css-kuxry5-Icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": {},
                              }
                            }
                          />
                          coding_criteria__criterion_create_button
                        </div>
                      </button>
                    </div>
                  </div>
                  <div
                    className="css-ukrkmq-CodingCriteriaCard"
                  >
                    <div
                      className="css-10d0xua-CodingCriteriaCard"
                    >
                      <div
                        className="css-10r4g6m-CodingCriteriaCard"
                      >
                        coding_criteria__criterion_edit_placeholder_label_main
                      </div>
                    </div>
                    <div
                      className="css-10n8pti-CodingCriteriaCard"
                    >
                      <div
                        className="css-f3jrl8-CodingCriteriaCard"
                      >
                        <div
                          className="css-1ouom5l-CodingCriteriaCard"
                        >
                          coding_criteria__criterion_edit_placeholder_label_main
                        </div>
                        <div
                          className="css-zu6kt9-CodingCriteriaCard"
                        >
                          coding_criteria__criterion_edit_placeholder_label_sub
                        </div>
                      </div>
                    </div>
                    <div
                      className="css-1gatnbf-CodingCriteriaCard"
                    >
                      <div
                        className="css-1ym2aqz-CodingCriteriaCard"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-az3uh-EditCodingCriterionModal"
            />
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`edit-coding-criterion-modal renders correctly (selected criterion) 1`] = `
<div
  className="css-1iw6hgd-Overlay"
>
  <div
    className="css-1iw6hgd-Overlay"
  >
    <div>
      <div
        className="css-14d3g2k-Modal"
      >
        <header
          className="css-a19c36-Modal"
        >
          <div
            className="css-1f6p2vj-Heading"
          >
            coding_criteria__edit_title
          </div>
          <div
            className="css-12vbzj8-Icon"
            dangerouslySetInnerHTML={
              {
                "__html": {},
              }
            }
            onClick={[MockFunction]}
          />
        </header>
        <section
          className="css-1q7islf-Modal"
        >
          <div
            className="css-1j59qpg-EditCodingCriterionModal"
          >
            <div
              className="css-33loto-EditCodingCriterionModal"
            >
              <div
                className="css-qcf7xd-Text"
              >
                coding_criteria__item_meta_data_label
              </div>
              <div
                className="css-lp36gr-EditCodingCriterionModal"
              >
                <div
                  className="css-11sbj94-Card"
                >
                  <div
                    className="css-1pf4w2g-CodingItemMetaCard"
                  >
                    <div
                      className="css-1j31nfz-CodingItemMetaCard"
                    >
                      <div
                        className="css-172xare-CodingItemMetaCard"
                      >
                        <div
                          className="css-qcf7xd-Text"
                        >
                          coding_criteria__item_meta_data_title
                        </div>
                        <div
                          className="css-17zbm7y-Text"
                        >
                          Item Analytisch
                        </div>
                      </div>
                      <div
                        className="css-172xare-CodingItemMetaCard"
                      >
                        <div
                          className="css-qcf7xd-Text"
                        >
                          coding_criteria__item_meta_data_method
                        </div>
                        <div
                          className="css-1xmxggd-CodingItemMetaCard"
                        >
                          <div
                            className="css-l0jg45-Icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": {},
                              }
                            }
                          />
                          <div
                            className="css-17zbm7y-Text"
                          >
                            coding_criteria__item_meta_data_method_manual
                          </div>
                        </div>
                      </div>
                      <div
                        className="css-172xare-CodingItemMetaCard"
                      >
                        <div
                          className="css-qcf7xd-Text"
                        >
                          coding_criteria__item_meta_data_type
                        </div>
                        <div
                          className="css-1xmxggd-CodingItemMetaCard"
                        >
                          <div
                            className="css-l0jg45-Icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": {},
                              }
                            }
                          />
                          <div
                            className="css-17zbm7y-Text"
                          >
                            coding_criteria__item_meta_data_type_holistic
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="css-172xare-CodingItemMetaCard"
                    >
                      <div
                        className="css-qcf7xd-Text"
                      >
                        coding_criteria__item_meta_data_description
                      </div>
                      <div
                        className="css-17zbm7y-Text"
                      >
                        Beschreibung des Items
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="css-1f7e4ki-EditCodingCriterionModal"
                >
                  <div
                    className="css-14jkzs7-CodingCriteriaList"
                  >
                    <div
                      className="css-6lflgn-Card"
                    >
                      <div
                        className="card-header css-1px9ixu-CardHeader"
                      >
                        <div
                          className="css-1f6p2vj-Heading"
                        >
                          coding_criteria__criterion_list_label
                        </div>
                      </div>
                      <div
                        className="css-1h6h5xo-Table"
                      >
                        <div
                          className="css-tqgzls-Table"
                        >
                          <div
                            className="css-1vq6m7g-Table"
                          >
                            <div
                              className="entity-row css-ah7j6b-Table"
                              onClick={[Function]}
                            >
                              <div
                                className="css-1sx0izl-Table"
                              >
                                <div
                                  className="css-cwwlew-Table"
                                >
                                  <div
                                    className="css-14cnkjy-Text"
                                  >
                                    Beschreibung Kodieranweisung 1
                                  </div>
                                </div>
                              </div>
                              <div
                                className="css-hfm0xv-Table"
                              >
                                <div
                                  className="css-cwwlew-Table"
                                >
                                  coding_criteria__criterion_list_score
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            className="css-1vq6m7g-Table"
                          >
                            <div
                              className="entity-row css-ah7j6b-Table"
                              onClick={[Function]}
                            >
                              <div
                                className="css-1sx0izl-Table"
                              >
                                <div
                                  className="css-1ex4m7a-Table"
                                >
                                  <div
                                    className="css-14cnkjy-Text"
                                  >
                                    Beschreibung Kodieranweisung 2
                                  </div>
                                </div>
                              </div>
                              <div
                                className="css-hfm0xv-Table"
                              >
                                <div
                                  className="css-1ex4m7a-Table"
                                >
                                  coding_criteria__criterion_list_score
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            className="css-1vq6m7g-Table"
                          >
                            <div
                              className="entity-row css-ah7j6b-Table"
                              onClick={[Function]}
                            >
                              <div
                                className="css-1sx0izl-Table"
                              >
                                <div
                                  className="css-1ex4m7a-Table"
                                >
                                  <div
                                    className="css-14cnkjy-Text"
                                  >
                                    Beschreibung Kodieranweisung 3
                                  </div>
                                </div>
                              </div>
                              <div
                                className="css-hfm0xv-Table"
                              >
                                <div
                                  className="css-1ex4m7a-Table"
                                >
                                  coding_criteria__criterion_list_score
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            className="css-1vq6m7g-Table"
                          >
                            <div
                              className="entity-row css-ah7j6b-Table"
                              onClick={[Function]}
                            >
                              <div
                                className="css-1sx0izl-Table"
                              >
                                <div
                                  className="css-1ex4m7a-Table"
                                >
                                  <div
                                    className="css-14cnkjy-Text"
                                  >
                                    Beschreibung Kodieranweisung 4
                                  </div>
                                </div>
                              </div>
                              <div
                                className="css-hfm0xv-Table"
                              >
                                <div
                                  className="css-1ex4m7a-Table"
                                >
                                  coding_criteria__criterion_list_score
                                </div>
                              </div>
                            </div>
                          </div>
                          <div
                            className="css-1vq6m7g-Table"
                          >
                            <div
                              className="entity-row css-ah7j6b-Table"
                              onClick={[Function]}
                            >
                              <div
                                className="css-1sx0izl-Table"
                              >
                                <div
                                  className="css-1ex4m7a-Table"
                                >
                                  <div
                                    className="css-14cnkjy-Text"
                                  >
                                    coding_criteria__criterion_list_description_placeholder
                                  </div>
                                </div>
                              </div>
                              <div
                                className="css-hfm0xv-Table"
                              >
                                <div
                                  className="css-1ex4m7a-Table"
                                >
                                  coding_criteria__criterion_list_score
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="css-7iutgy-CodingCriteriaList"
                    >
                      <button
                        className="css-mdrh0d-Button"
                        disabled={false}
                        onClick={[Function]}
                      >
                        <div
                          className="css-95j2hm-Button"
                        >
                          <div
                            className="css-kuxry5-Icon"
                            dangerouslySetInnerHTML={
                              {
                                "__html": {},
                              }
                            }
                          />
                          coding_criteria__criterion_create_button
                        </div>
                      </button>
                    </div>
                  </div>
                  <div
                    className="css-ukrkmq-CodingCriteriaCard"
                  >
                    <div
                      className="css-10d0xua-CodingCriteriaCard"
                    >
                      <div
                        className="css-10r4g6m-CodingCriteriaCard"
                      >
                        coding_criteria__criterion_edit_title
                      </div>
                      <div
                        className="css-0"
                      >
                        <button
                          className="css-19sn4ub-Button"
                          disabled={false}
                          onClick={[Function]}
                        >
                          <div
                            className="css-95j2hm-Button"
                          >
                            <div
                              className="css-mj8vo1-Icon"
                              dangerouslySetInnerHTML={
                                {
                                  "__html": {},
                                }
                              }
                            />
                          </div>
                        </button>
                      </div>
                    </div>
                    <div
                      className="css-10n8pti-CodingCriteriaCard"
                    >
                      <div
                        className="css-flpatp-CodingCriteriaCard"
                      >
                        <div
                          className="css-tn6ay8-CodingCriteriaCard"
                        >
                          <div
                            className="css-qcf7xd-Text"
                          >
                            coding_criteria__criterion_scoring_label_holistic
                          </div>
                          <div
                            className="css-lig0wa-Card"
                          >
                            <div
                              className="css-fmthw-Text"
                            >
                              rating__holistic_description
                            </div>
                            <div
                              className="css-1fzpm83-CodingCriteriaCard"
                            >
                              <div
                                className="css-1rexzwu"
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                              >
                                <div
                                  className="css-wzjnay"
                                >
                                  <input
                                    className="css-1boelfn"
                                    defaultValue="12"
                                    disabled={false}
                                    max={99}
                                    min={0}
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onFocus={[Function]}
                                    type="number"
                                  />
                                  <div
                                    className="css-1wfdxtz-Icon"
                                    dangerouslySetInnerHTML={
                                      {
                                        "__html": {},
                                      }
                                    }
                                    onClick={[Function]}
                                  />
                                </div>
                              </div>
                              <div
                                className="css-gtiuuf-CodingCriteriaCard"
                              >
                                coding_criteria__criterion_scoring_input_label
                              </div>
                            </div>
                          </div>
                        </div>
                        <div
                          className="css-tn6ay8-CodingCriteriaCard"
                        >
                          <div
                            className="css-qcf7xd-Text"
                          >
                            coding_criteria__criterion_description_label
                          </div>
                          <div
                            className="css-g19uh5"
                          >
                            <textarea
                              className="css-ucw310"
                              onBlur={[Function]}
                              onChange={[Function]}
                              value="Beschreibung Kodieranweisung 1"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      className="css-1gatnbf-CodingCriteriaCard"
                    >
                      <div
                        className="css-1ym2aqz-CodingCriteriaCard"
                      >
                        <div
                          className="css-1qx9r4q-CodingCriteriaCard"
                        >
                          <div
                            className="css-174nxx7-CodingCriteriaCard"
                          >
                            coding_criteria__criterion_scoring_label
                          </div>
                          <div
                            className="css-18gmvy9-CodingCriteriaCard"
                          >
                            coding_criteria__criterion_list_score
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="css-az3uh-EditCodingCriterionModal"
            />
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;
